# capstone-agent

./: README.md  config.py  dockerfile  main.py  pyproject.toml  requirements.txt  utils.py
agent/: .env.example  .gitignore  SYSTEM_DESIGN.md  azure.yaml  config.py  dockerfile  graph.py  main.py  pyproject.toml  requirements.txt  state.py  test.py
agent/agent/: graph.py
agent/agent/auth/: amadeus_auth.py
agent/agent/nodes/: activity_agent.py  flight_agent.py  hotel_agent.py  itinerary_agent.py
agent/agent/tools/: amadeus_activity_tool.py  amadeus_flights_tool.py  coordinates_tool.py  google_maps_tool.py  itineraryTools.py
agent/auth/: amadeus_auth.py
agent/models/: models.py
agent/nodes/: activity_agent.py  flight_agent.py  hotel_agent.py
agent/routes/: chat_routes.py
agent/utils/: user_profile.py  utils.py
